--- a/index.html
+++ b/index.html
@@ -2,46 +2,48 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>500% Бонус на первый депозит</title>
+  <title>Мой сайт</title>
   <style>
     body {
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
       text-align: center;
       background: linear-gradient(135deg, #1e3c72, #2a5298);
       color: white;
-      margin: 0;
-      padding: 0;
     }
     .container {
-      padding: 100px 20px;
+      padding: 60px;
     }
     h1 {
-      font-size: 36px;
+      font-size: 40px;
       margin-bottom: 20px;
     }
     p {
-      font-size: 20px;
-      margin-bottom: 40px;
-    }
-    .btn {
-      background: #ffcc00;
-      color: black;
-      padding: 15px 30px;
       font-size: 22px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: bold;
+      margin-bottom: 30px;
     }
-    .btn:hover {
-      background: #ffaa00;
+    button {
+      background: yellow;
+      color: black;
+      font-weight: bold;
+      border: none;
+      padding: 15px 30px;
+      font-size: 18px;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: orange;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>⚡ Получи 500% бонус прямо сейчас!</h1>
-    <p>Регистрируйся и начни выигрывать с 1WIN</p>
-    <a class="btn" href="https://1wdxjb.com?p=szns">Играть</a>
+    <h1>Добро пожаловать 🚀</h1>
+  
+    <button>Нажми сюда</button>
   </div>
 </body>
 </html>
