--- a/index.html
+++ b/index.html
@@ -9,40 +9,43 @@
       padding: 0;
       font-family: Arial, sans-serif;
       text-align: center;
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      background: url("https://picsum.photos/1920/1080") no-repeat center center fixed;
+      background-size: cover;
       color: white;
     }
     .container {
-      padding: 60px;
+      padding: 80px 20px;
     }
     h1 {
-      font-size: 40px;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 22px;
-      margin-bottom: 30px;
+      font-size: 46px;
+      margin-bottom: 40px;
+      animation: fadeIn 2s ease-in-out;
     }
     button {
-      background: yellow;
-      color: black;
+      background: linear-gradient(90deg, #ff0000, #ff9900);
+      color: white;
       font-weight: bold;
       border: none;
-      padding: 15px 30px;
-      font-size: 18px;
+      padding: 15px 35px;
+      font-size: 20px;
       border-radius: 12px;
       cursor: pointer;
-      transition: 0.3s;
+      transition: 0.5s;
     }
     button:hover {
-      background: orange;
+      transform: scale(1.1);
+      background: linear-gradient(90deg, #ff9900, #ff0000);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Добро пожаловать 🚀</h1>
-  
     <button>Нажми сюда</button>
   </div>
 </body>
