--- a/index.html
+++ b/index.html
@@ -2,70 +2,44 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Добро пожаловать</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Лучший бонус 🎁</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      text-align: center;
-      background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
-      background-size: 400% 400%;
-      animation: gradient 10s ease infinite;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       color: white;
+      text-align: center;
+      padding: 50px;
     }
-
-    @keyframes gradient {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-
-    .container {
-      padding: 100px 20px;
-    }
-
     h1 {
-      font-size: 50px;
-      margin-bottom: 40px;
-      animation: fadeIn 2s ease-in-out;
-      text-shadow: 2px 2px 8px black;
+      font-size: 28px;
+      margin-bottom: 20px;
     }
-
     p {
-      font-size: 22px;
+      font-size: 18px;
       margin-bottom: 40px;
-      animation: fadeIn 3s ease-in-out;
     }
-
     a.button {
       display: inline-block;
-      background: linear-gradient(90deg, #ff0000, #ff9900);
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      padding: 15px 35px;
+      padding: 15px 30px;
+      background: #ffcc00;
+      color: #000;
       font-size: 20px;
-      border-radius: 12px;
-      transition: 0.4s;
+      font-weight: bold;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: 0.3s;
     }
-
     a.button:hover {
-      transform: scale(1.1);
-      background: linear-gradient(90deg, #ff9900, #ff0000);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+      background: #ffaa00;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🔥 Добро пожаловать на мой сайт 🔥</h1>
-    <p>Здесь ты найдёшь всё самое интересное 🚀</p>
-    <a href="https://example.com" class="button">Перейти</a>
-  </div>
+  <h1>🔥 Лови лучший бонус прямо сейчас!</h1>
+  <p>Жми на кнопку и забирай 🎁</p>
+  <a href="https://example.com" class="button" target="_blank">👉 Играть тут 🚀</a>
 </body>
 </html>
