--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 <body>
   <h1>🔥 Лови лучший бонус прямо сейчас!</h1>
   <p>Жми на кнопку и забирай 🎁</p>
-  <a href="https://1wvux.com?p=szns" class="button" target="_blank">👉 Играть тут 🚀</a>
+  <a href="https://1wvuox.com?p=szns" class="button" target="_blank" rel="noopener">👉 Играть тут 🚀</a>
 </body>
 </html>
