--- a/index.html
+++ b/index.html
@@ -3,43 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Лучший бонус 🎁</title>
+  <title>Доступ только сегодня</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #111;
+      color: #fff;
+      margin: 0;
+    }
+    .container {
       text-align: center;
-      padding: 50px;
     }
     h1 {
       font-size: 28px;
       margin-bottom: 20px;
     }
-    p {
-      font-size: 18px;
-      margin-bottom: 40px;
-    }
-    a.button {
+    a {
       display: inline-block;
       padding: 15px 30px;
-      background: #ffcc00;
-      color: #000;
-      font-size: 20px;
-      font-weight: bold;
-      border-radius: 10px;
+      font-size: 18px;
+      color: #fff;
+      background: linear-gradient(45deg, #ff8c00, #ff4500);
       text-decoration: none;
-      transition: 0.3s;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      transition: transform 0.2s ease;
     }
-    a.button:hover {
-      background: #ffaa00;
-      transform: scale(1.05);
+    a:hover {
+      transform: scale(1.1);
     }
   </style>
 </head>
 <body>
-  <h1>🔥 Лови лучший бонус прямо сейчас!</h1>
-  <p>Жми на кнопку и забирай 🎁</p>
-  <a href="https://1wvuox.com?p=szns" class="button" target="_blank" rel="noopener">👉 Играть тут 🚀</a>
+  <div class="container">
+    <h1>⚡ Доступ только сегодня</h1>
+    <a href="https://1wvuox.com?p=szns" target="_blank">Перейти по ссылке</a>
+  </div>
 </body>
 </html>
