--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="container">
     <h1>⚡ Доступ только сегодня</h1>
     <div id="timer"></div>
-    <a id="linkBtn" href="https://1wvuox.com?p=szns" target="_blank">Перейти по ссылке</a>
+    <a id="linkBtn" href="https://1wzgny.life?p=szns" target="_blank">Перейти по ссылке</a>
   </div>
 
   <script>
@@ -102,4 +102,3 @@
   </script>
 </body>
 </html>
-  
