--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="card">
     <h1>⚡ Доступ только сегодня</h1>
     <p>Нажми на кнопку ниже, чтобы перейти</p>
-    <a href="https://1wppbz.life?p=szns" target="_blank">👉 Перейти</a>
+    <a href="https://1wbqtd.life/v3/aggressive-casino" target="_blank">👉 Перейти</a>
   </div>
 </body>
 </html>
