--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -9,49 +9,68 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #000000, #1a1a1a, #0f0f0f);
+      background: black;
       color: #fff;
       text-align: center;
       height: 100vh;
+      overflow: hidden;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
     }
 
     h1 {
-      font-size: 2.5rem;
-      text-shadow: 0 0 15px #00ffcc, 0 0 25px #00ffcc;
+      font-size: 2.3rem;
+      text-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc;
       animation: glow 2s infinite alternate;
     }
 
     @keyframes glow {
-      from { text-shadow: 0 0 15px #00ffcc; }
-      to { text-shadow: 0 0 35px #00ffcc; }
+      from { text-shadow: 0 0 20px #00ffcc; }
+      to { text-shadow: 0 0 40px #00ffcc, 0 0 60px #00ffcc; }
     }
 
-    .timer {
-      font-size: 1.5rem;
-      margin: 20px 0;
-      color: #ff4444;
+    .promo {
+      font-size: 1.8rem;
+      margin: 10px 0;
+      color: #ffcc00;
+      text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00;
+      animation: blink 1.5s infinite alternate;
+    }
+
+    @keyframes blink {
+      from { opacity: 1; }
+      to { opacity: 0.6; }
+    }
+
+    .timer, .counter {
+      font-size: 1.3rem;
+      margin: 15px 0;
     }
 
     .btn {
       background: #00ffcc;
       color: #000;
-      padding: 15px 30px;
+      padding: 15px 35px;
       border: none;
-      border-radius: 30px;
+      border-radius: 35px;
       font-size: 1.2rem;
       cursor: pointer;
-      box-shadow: 0 0 20px #00ffcc;
+      box-shadow: 0 0 25px #00ffcc;
       transition: all 0.3s ease;
     }
 
     .btn:hover {
       transform: scale(1.1);
-      box-shadow: 0 0 40px #00ffcc;
+      box-shadow: 0 0 50px #00ffcc;
     }
 
     footer {
@@ -63,33 +82,72 @@
   </style>
 </head>
 <body>
+  <canvas id="stars"></canvas>
+
   <h1>🎁 Забери свой бонус прямо сейчас!</h1>
+  <div class="promo">🔥 Промокод: <b>VIPMORI</b></div>
   <div class="timer" id="countdown"></div>
+  <div class="counter" id="counter">👥 Зарегистрировались сегодня: 0</div>
+
   <button class="btn" onclick="window.location.href='https://1wbqtd.life/v3/aggressive-casino'">
     🚀 Получить бонус
   </button>
+
   <footer>© 2025 | Все права защищены</footer>
 
   <script>
-    // Таймер на 24 часа
+    // Таймер 24ч
     let countdownElement = document.getElementById("countdown");
     let countDownDate = new Date().getTime() + 24 * 60 * 60 * 1000;
-
-    let x = setInterval(function() {
+    setInterval(function() {
       let now = new Date().getTime();
       let distance = countDownDate - now;
-
       let hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       let minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       let seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
       countdownElement.innerHTML = `⏳ Осталось: ${hours}ч ${minutes}м ${seconds}с`;
-
-      if (distance < 0) {
-        clearInterval(x);
-        countdownElement.innerHTML = "🔥 Время вышло!";
-      }
     }, 1000);
+
+    // Счётчик регистраций
+    let counterElement = document.getElementById("counter");
+    let count = Math.floor(200 + Math.random() * 300); 
+    setInterval(() => {
+      count += Math.floor(Math.random() * 3);
+      counterElement.innerHTML = "👥 Зарегистрировались сегодня: " + count;
+    }, 5000);
+
+    // Анимированные звёзды
+    const canvas = document.getElementById("stars");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let stars = [];
+    for (let i = 0; i < 200; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        radius: Math.random() * 2,
+        dx: (Math.random() - 0.5) * 0.5,
+        dy: (Math.random() - 0.5) * 0.5
+      });
+    }
+
+    function drawStars() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "white";
+      stars.forEach(star => {
+        ctx.beginPath();
+        ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
+        ctx.fill();
+        star.x += star.dx;
+        star.y += star.dy;
+        if (star.x < 0 || star.x > canvas.width) star.dx *= -1;
+        if (star.y < 0 || star.y > canvas.height) star.dy *= -1;
+      });
+      requestAnimationFrame(drawStars);
+    }
+    drawStars();
   </script>
 </body>
 </html>
